# collective_intelligence

./: .env.example  .gitignore  BIRTH.md  CLAUDE.md  README.md  main.py  pyproject.toml  reset_entity.py
dev/: PLAN.md
dev/good_examples/: IDENTITY.md
entity/: HARNESS.md  IDENTITY.md  self_image.txt
entity/images/self_images/: self_image_20260422_211158.txt  self_image_20260422_221156.txt  self_image_20260422_221358.txt
entity/memory/short_term/: 2026-04-22T16-05-59.md  2026-04-22T16-09-49_task_20260422_210949_self_image_generation.md  2026-04-22T16-11-55_task_20260422_211155_self_image_generation.md  2026-04-22T17-11-54.md  2026-04-22T17-11-54_task_20260422_221154_self_image_generation.md  2026-04-22T17-13-56_task_20260422_221356_self_image_generation.md
entity/schedules/: self_image_generation.md
entity/skills/archive_session/: skill.py
entity/skills/complete_task/: SKILL.md
entity/skills/consolidate_memory/: skill.py
entity/skills/create_memory/: skill.py
entity/skills/create_note/: SKILL.md  skill.py
entity/skills/create_skill/: SKILL.md  skill.py
entity/skills/delete_memory/: SKILL.md  skill.py
harness/: BIRTH.md  __init__.py  bootstrap.py  client.py  config.py  entity.py
harness/integrations/: gmail.py  google.py
harness/memory/: long_term.py  store.py
harness/runtime/: scheduler.py  worker.py
harness/skills/: loader.py  meta.py  registry.py
harness/template/: HARNESS.md
harness/ui/: tui.py
scripts/: gmail_auth.py  install_google_workspace.py  reset_entity.py
src/collective/: client.py  config.py  entity.py
(+101 files in other folders)
